@@ -1,3 +1,10 @@
+TAG: qcreports_db-6-0-2-2
+DATE: 01/04/2016
+STAFF: lec
+CHANGES:
+TR12216/Improve Duplicate MP annotation QC report
+1) weekly/VOC_MPDups.sql
+
 TAG: qcreports_db-6-0-2-1
 DATE: 12/24/2015
 STAFF: lec
